[package]
name = "du"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Spécifiez le profil par défaut pour la commande `cargo run`
[package.metadata.default-run]
bin = "main"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "interface"
path = "src/interface.rs"






[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
hex = "0.4.3"
md-5 = "0.10.6"
rust-crypto = "0.2.36"
rayon = "1.8.0"
crossterm = "0.27.0"
ratatui = "0.24.0"
env = "0.0.0"
